--- a/kiddy/src/pages/home/home.module.scss
+++ b/kiddy/src/pages/home/home.module.scss
@@ -2,4 +2,41 @@ main {
   background-color: rgb(255, 255, 255);
   z-index: 999;
   position: relative;
+  .colorCards {
+    display: flex;
+    .first {
+      background-color: blue;
+      margin: 30px;
+      position: relative;
+    }
+    .second {
+      background-color: blue;
+      position: relative;
+      margin: 30px 0px;
+    }
+    .third {
+      background-color: blue;
+      margin: 30px;
+      position: relative;
+    }
+  }
+}
+
+.circleIcon {
+  background-color: red;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translate(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
+  font-size: 1rem;
+  padding: 20px;
 }
