--- a/kiddy/src/components/navbar/navbar.module.scss
+++ b/kiddy/src/components/navbar/navbar.module.scss
@@ -11,7 +11,7 @@ header {
   }
   .hero {
     .heroTxt {
-      padding: 100px 840px 100px 100px;
+      padding: 100px 840px 0px 100px;
       margin-top: 3rem;
 
       h1 {
@@ -25,14 +25,23 @@ header {
         color: red;
       }
     }
+    .btn {
+      margin: 80px 0px 0px 100px;
+      padding-bottom: 110px;
+    }
   }
   .topNav {
     display: flex;
     justify-content: space-between;
+    margin: 0px 100px;
+    padding-top: 30px;
     .navLogo {
       font-size: 3rem;
       color: white;
-      margin: 50px 0px 0px 100px;
+      span {
+        color: red;
+      }
+      // margin: 50px 0px 0px 100px;
     }
     .navText {
       display: flex;
@@ -40,9 +49,12 @@ header {
       .navAdres {
         display: flex;
         flex-direction: row;
-        margin: 50px;
+        align-items: center;
+        width: 270px;
+        color: white;
+        // margin: 50px;
         font-size: 14px;
-        padding: 0px 30px;
+        // padding: 0px 30px;
         .navIcon {
         }
       }
@@ -51,7 +63,7 @@ header {
   .nav {
     display: flex;
     background-color: rgb(255, 255, 255);
-    margin: 50px 100px;
+    margin: 30px 100px;
     border-radius: 50px;
     height: 90px;
     align-items: center;
@@ -71,6 +83,21 @@ header {
     .socialIcons {
       display: flex;
       list-style-type: none;
+      padding: 0px 30px;
+
+      .iconF {
+        color: #16c3b0;
+        font-size: 26px;
+      }
+      .iconIn {
+        color: #71bc42;
+        font-size: 26px;
+        margin: 0px 26px;
+      }
+      .iconT {
+        color: #fdb62f;
+        font-size: 26px;
+      }
     }
   }
 }
@@ -86,14 +113,26 @@ header {
   .dispNone {
     display: none;
   }
+  .btn {
+    display: none;
+  }
 }
 .home {
   // background-image: url(../../assets/images/kid.webp);
   background-repeat: no-repeat;
-  background-color: gray;
+  background-color: #b2b2b2;
   position: relative;
 }
 
-.icon {
-  font-size: 30px;
+.icon1 {
+  font-size: 26px;
+  text-align: center;
+  margin-right: 10px;
+  color: #fdb62f;
+}
+.icon2 {
+  font-size: 26px;
+  text-align: center;
+  margin-right: 10px;
+  color: #fd4d40;
 }
