--- a/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
+++ b/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
@@ -1,5 +1,5 @@
 .OurPricing {
-  background-color: yellow;
+  background-color: rgb(255, 255, 255);
   display: flex;
   .pricingTxt {
     color: rgb(43, 42, 42);
