--- a/kiddy/src/pages/home/home.module.scss
+++ b/kiddy/src/pages/home/home.module.scss
@@ -4,31 +4,42 @@ main {
   position: relative;
   .colorCards {
     display: flex;
+    padding: 100px 0px;
+    justify-content: center;
     .first {
-      background-color: blue;
+      background-color: #fd4d40;
       margin: 30px;
       position: relative;
+      .one {
+        background-color: #fd4d40;
+      }
     }
     .second {
-      background-color: blue;
+      background-color: #fdb62f;
       position: relative;
       margin: 30px 0px;
+      .two {
+        background-color: #fdb62f;
+      }
     }
     .third {
-      background-color: blue;
+      background-color: #16c3b0;
       margin: 30px;
       position: relative;
+      .three {
+        background-color: #16c3b0;
+      }
     }
   }
 }
 
 .circleIcon {
   background-color: red;
-  width: 50px;
-  height: 50px;
+  width: 76px;
+  height: 76px;
   border-radius: 50%;
   position: absolute;
-  top: -30px;
+  top: -35px;
   left: 50%;
   transform: translate(-50%);
   display: flex;
@@ -38,5 +49,15 @@ main {
 
 .text {
   font-size: 1rem;
-  padding: 20px;
+  padding: 70px 40px 40px 40px;
+  text-align: center;
+  width: 380px;
+  height: 270px;
+  h5 {
+    font-size: 1.3rem;
+    padding-bottom: 18px;
+  }
+  p {
+    font-size: 18px;
+  }
 }
