--- a/kiddy/src/components/navbar/navbar.module.scss
+++ b/kiddy/src/components/navbar/navbar.module.scss
@@ -109,7 +109,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   height: 700px;
-  background-color: red;
+  background-color: #fd4d40;
   .dispNone {
     display: none;
   }
