--- a/kiddy/src/components/reusibleComponents/aboutUs/aboutUs.module.scss
+++ b/kiddy/src/components/reusibleComponents/aboutUs/aboutUs.module.scss
@@ -11,6 +11,22 @@
     }
     .texts {
       padding: 90px;
+      h5 {
+        color: #fd4d40;
+        font-family: "Indie Flower", cursive;
+        font-size: 1.5rem;
+        font-weight: 100px;
+      }
+      h3 {
+        font-size: 1.7rem;
+        font-weight: 300;
+        padding-bottom: 10px;
+      }
+      p {
+        color: rgb(0, 0, 0, 0.7);
+        line-height: 30px;
+        padding-bottom: 30px;
+      }
     }
   }
 }
