--- a/kiddy/src/components/reusibleComponents/testimonial/carousel/corousel.module.scss
+++ b/kiddy/src/components/reusibleComponents/testimonial/carousel/corousel.module.scss
@@ -2,20 +2,36 @@
   //   display: flex;
   //   flex-direction: row;
   .slider {
-    background-color: green;
+    background-color: #fd4d40;
     display: flex !important;
     flex-direction: row !important;
     .img {
-      padding: 50px;
+      padding: 20px 60px 60px 20px;
       img {
-        width: 50px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
         // padding: 20px;
       }
     }
     .text {
       padding: 20px;
       color: white;
+      h5 {
+        font-size: 1.3rem;
+        color: rgb(255, 255, 255, 0.8);
+        padding: 0px 10px 10px 0px;
+      }
+      h6 {
+        font-size: 1rem;
+        font-weight: 300;
+        color: rgba(207, 207, 207, 0.6);
+        padding-bottom: 10px;
+      }
+      p {
+        font-size: 1.3rem;
+        line-height: 34px;
+        padding-bottom: 20px;
+      }
     }
   }
 }
