--- a/kiddy/src/components/reusibleComponents/testimonial/testimonial.module.scss
+++ b/kiddy/src/components/reusibleComponents/testimonial/testimonial.module.scss
@@ -1,10 +1,49 @@
 .testimonial {
+  background-color: #f6f5f5;
+  padding: 130px;
   .header {
     text-align: center;
+    h5 {
+      font-size: 1.3rem;
+      font-weight: 300;
+      font-family: "Indie Flower", cursive;
+      color: red;
+    }
+    h3 {
+      font-size: 2.2rem;
+      font-weight: 300;
+    }
   }
   .slider {
-    margin: 100px auto;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 30px;
     width: 760px;
     height: 250px;
+  }
+  .numbers {
+    display: flex;
+    justify-content: center;
+    p {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0px 70px;
+      div {
+        font-size: 2rem;
+      }
+      &:nth-child(1) div {
+        color: #16c3b0;
+      }
+      &:nth-child(2) div {
+        color: #fdb62f;
+      }
+      &:nth-child(3) div {
+        color: #71bc42;
+      }
+      &:nth-child(4) div {
+        color: #dc3545;
+      }
+    }
   }
 }
