--- a/kiddy/src/pages/about/about.module.scss
+++ b/kiddy/src/pages/about/about.module.scss
@@ -1,12 +1,36 @@
 .team {
   display: flex;
   flex-direction: column;
-  margin: auto 90px;
   text-align: center;
+  background-color: #16c3b0;
+  width: 100%;
+
+  padding: 110px 0px 0px 0px;
+  h6 {
+    color: #fd4d40;
+    font-family: "Indie Flower", cursive;
+    font-weight: 200;
+    font-size: 1.2rem;
+  }
+  h3 {
+    padding: 10px;
+    color: white;
+    font-size: 1.6rem;
+    font-weight: 300;
+  }
+  p {
+    padding: 0px 0px 60px 0px;
+    color: rgb(0, 0, 0, 0.7);
+  }
   .teamCards {
     grid-template-columns: repeat(3, 1fr);
     display: grid;
-    gap: 90px 0px;
-    margin-top: 100px;
+    gap: 110px 30px;
+    margin: 100px auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .teamCards {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
