--- a/kiddy/src/pages/home/home.module.scss
+++ b/kiddy/src/pages/home/home.module.scss
@@ -54,10 +54,12 @@ main {
   width: 380px;
   height: 270px;
   h5 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     padding-bottom: 18px;
+    color: white;
   }
   p {
     font-size: 18px;
+    color: rgb(255, 255, 255, 0.7);
   }
 }
