--- a/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
+++ b/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   margin: 70px 100px;
   justify-content: space-between;
+  flex-direction: column;
   .pricingTxt {
     color: rgb(43, 42, 42);
     h6 {
@@ -120,4 +121,7 @@
       }
     }
   }
+}
+
+@media screen and (max-width: 480px) {
 }
