--- a/kiddy/src/pages/home/home.module.scss
+++ b/kiddy/src/pages/home/home.module.scss
@@ -2,6 +2,7 @@ main {
   background-color: rgb(255, 255, 255);
   z-index: 999;
   position: relative;
+  width: 100%;
   .colorCards {
     display: flex;
     padding: 100px 0px;
@@ -61,5 +62,75 @@ main {
   p {
     font-size: 18px;
     color: rgb(255, 255, 255, 0.7);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  main {
+    background-color: rgb(255, 255, 255);
+    z-index: 999;
+    position: relative;
+    width: 100%;
+    .colorCards {
+      display: flex;
+      padding: 0px;
+      justify-content: center;
+      flex-direction: column;
+      .first {
+        background-color: #fd4d40;
+        margin: 0px;
+        position: relative;
+        .one {
+          background-color: #fd4d40;
+        }
+      }
+      .second {
+        background-color: #fdb62f;
+        position: relative;
+        margin: 0px;
+        .two {
+          background-color: #fdb62f;
+        }
+      }
+      .third {
+        background-color: #16c3b0;
+        margin: 0px;
+        position: relative;
+        .three {
+          background-color: #16c3b0;
+        }
+      }
+    }
+  }
+
+  .circleIcon {
+    background-color: red;
+    width: 76px;
+    height: 76px;
+    border-radius: 50%;
+    position: absolute;
+    top: -35px;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text {
+    font-size: 1rem;
+    padding: 70px 40px 40px 40px;
+    text-align: center;
+    width: 480px;
+    height: 270px;
+    h5 {
+      font-size: 1.2rem;
+      padding-bottom: 18px;
+      color: white;
+    }
+    p {
+      font-size: 18px;
+      color: rgb(255, 255, 255, 0.7);
+    }
   }
 }
