--- a/kiddy/src/components/navbar/navbar.module.scss
+++ b/kiddy/src/components/navbar/navbar.module.scss
@@ -2,14 +2,6 @@ header {
   font-family: "DM Sans", sans-serif;
   width: 100%;
 
-  .dispNone {
-    position: absolute;
-    left: 800px;
-    z-index: 100;
-    img {
-      width: 540px;
-    }
-  }
   .hero {
     .heroTxt {
       padding: 100px 840px 0px 100px;
@@ -143,16 +135,90 @@ header {
   header {
     width: 100%;
     .hero {
-      display: none;
+      .heroTxt {
+        padding: 30px 10px;
+        margin-top: 1rem;
+
+        h1 {
+          font-size: 2rem;
+          color: white;
+        }
+        .cursive {
+          font-family: "Indie Flower", cursive;
+          font-weight: 400;
+          font-style: normal;
+          color: red;
+        }
+      }
+      .btn {
+        margin: 10px 0px 0px 10px;
+        padding-bottom: 110px;
+      }
     }
     .nav {
-      display: none;
+      // display: none;
+      margin: 20px;
+      .list {
+        display: none;
+      }
     }
   }
   .dispNone {
-    display: none;
+    position: absolute;
+    left: 140px;
+    top: 330px;
+    z-index: 150;
+    img {
+      width: 240px;
+    }
   }
   .navText {
     display: none !important;
+  }
+  .showMenu {
+    // display: block;
+    background-color: white;
+    position: absolute;
+    z-index: 1100;
+    width: 70%;
+    // height: 100%;
+    top: 0;
+    right: 0;
+
+    li {
+      list-style-type: none;
+      text-align: right;
+      padding: 20px;
+
+      a {
+        text-decoration: none;
+      }
+    }
+  }
+  .hideMenu {
+    display: none;
+  }
+  .burgerIcon {
+    padding: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .burgerIcon {
+    display: none;
+  }
+  .mobile {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .dispNone {
+    position: absolute;
+    left: 800px;
+    z-index: 100;
+    img {
+      width: 540px;
+    }
   }
 }
