--- a/kiddy/src/components/reusibleComponents/ourPackages/ourPackages.module.scss
+++ b/kiddy/src/components/reusibleComponents/ourPackages/ourPackages.module.scss
@@ -58,3 +58,11 @@
     }
   }
 }
+
+@media screen and (max-width: 480px) {
+  .cards {
+    flex-direction: column !important;
+    padding: 0px;
+    align-items: center;
+  }
+}
