--- a/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
+++ b/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
@@ -1,9 +1,8 @@
 .OurPricing {
   background-color: rgb(255, 255, 255);
   display: flex;
-  margin: 70px 100px;
+  padding: 70px 100px;
   justify-content: space-between;
-  flex-direction: column;
   .pricingTxt {
     color: rgb(43, 42, 42);
     h6 {
@@ -124,4 +123,10 @@
 }
 
 @media screen and (max-width: 480px) {
+  .OurPricing {
+    flex-direction: column;
+  }
+  .pricingFirst {
+    padding: 30px 0px;
+  }
 }
