--- a/kiddy/src/components/reusibleComponents/testimonial/carousel/corousel.module.scss
+++ b/kiddy/src/components/reusibleComponents/testimonial/carousel/corousel.module.scss
@@ -1,16 +1,12 @@
 .sliders {
-  //   display: flex;
-  //   flex-direction: row;
   .slider {
     background-color: #fd4d40;
-    display: flex !important;
-    flex-direction: row !important;
+    display: flex;
     .img {
       padding: 20px 60px 60px 20px;
       img {
         width: 80px;
         height: 80px;
-        // padding: 20px;
       }
     }
     .text {
@@ -18,8 +14,8 @@
       color: white;
       h5 {
         font-size: 1.3rem;
-        color: rgb(255, 255, 255, 0.8);
-        padding: 0px 10px 10px 0px;
+        color: rgba(255, 255, 255, 0.8);
+        padding-bottom: 10px;
       }
       h6 {
         font-size: 1rem;
@@ -34,7 +30,44 @@
       }
     }
   }
-}
-.slick-dots {
-  bottom: 50px;
+
+  .slick-dots {
+    bottom: 50px;
+  }
+
+  @media screen and (max-width: 480px) {
+    .slider {
+      flex-direction: column;
+      .img {
+        padding: 10px;
+      }
+      .text {
+        padding: 10px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .slider {
+      flex-direction: column;
+      .img {
+        padding: 10px;
+      }
+      .text {
+        padding: 10px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .slider {
+      flex-direction: row !important;
+      .img {
+        padding: 20px 60px 60px 20px;
+      }
+      .text {
+        padding: 20px;
+      }
+    }
+  }
 }
