--- a/kiddy/src/components/reusibleComponents/testimonial/testimonial.module.scss
+++ b/kiddy/src/components/reusibleComponents/testimonial/testimonial.module.scss
@@ -1,66 +1,157 @@
-.testimonial {
-  background-color: #f6f5f5;
-  padding: 130px;
-  .header {
-    text-align: center;
-    h5 {
-      font-size: 1.3rem;
-      font-weight: 300;
-      font-family: "Indie Flower", cursive;
-      color: red;
+@media screen and (max-width: 480px) {
+  .testimonial {
+    background-color: #f6f5f5;
+    // padding: 30px;
+    // margin: 20px;
+    .header {
+      text-align: center;
+      h5 {
+        font-size: 1.1rem;
+        font-weight: 300;
+        font-family: "Indie Flower", cursive;
+        color: red;
+      }
+      h3 {
+        font-size: 2.2rem;
+        font-weight: 300;
+      }
     }
-    h3 {
-      font-size: 2.2rem;
-      font-weight: 300;
+    .slider {
+      margin: auto;
+      margin-top: 60px;
+      margin-bottom: 30px;
+      width: 100%;
+      height: 250px;
     }
-  }
-  .slider {
-    margin: auto;
-    margin-top: 60px;
-    margin-bottom: 30px;
-    width: 760px;
-    height: 250px;
-  }
-  .numbers {
-    display: flex;
-    justify-content: center;
-    p {
+    .numbers {
       display: flex;
+      justify-content: center;
       flex-direction: column;
-      align-items: center;
-      padding: 0px 70px;
-      div {
-        font-size: 2rem;
-      }
-      &:nth-child(1) div {
-        color: #16c3b0;
-      }
-      &:nth-child(2) div {
-        color: #fdb62f;
-      }
-      &:nth-child(3) div {
-        color: #71bc42;
-      }
-      &:nth-child(4) div {
-        color: #dc3545;
+      p {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px 20px;
+        div {
+          font-size: 2rem;
+        }
+        &:nth-child(1) div {
+          color: #16c3b0;
+        }
+        &:nth-child(2) div {
+          color: #fdb62f;
+        }
+        &:nth-child(3) div {
+          color: #71bc42;
+        }
+        &:nth-child(4) div {
+          color: #dc3545;
+        }
       }
     }
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .testimonial {
+    background-color: #f6f5f5;
     padding: 30px;
+    .header {
+      text-align: center;
+      h5 {
+        font-size: 1.3rem;
+        font-weight: 300;
+        font-family: "Indie Flower", cursive;
+        color: red;
+      }
+      h3 {
+        font-size: 2.2rem;
+        font-weight: 300;
+      }
+    }
+    .slider {
+      margin: auto;
+      margin-top: 60px;
+      margin-bottom: 30px;
+      width: 100%;
+      height: 250px;
+    }
+    .numbers {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      p {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px 70px;
+        div {
+          font-size: 2rem;
+        }
+        &:nth-child(1) div {
+          color: #16c3b0;
+        }
+        &:nth-child(2) div {
+          color: #fdb62f;
+        }
+        &:nth-child(3) div {
+          color: #71bc42;
+        }
+        &:nth-child(4) div {
+          color: #dc3545;
+        }
+      }
+    }
   }
-  .slider {
-    margin: auto;
-    margin-top: 60px;
-    margin-bottom: 30px;
-    width: 360px;
-    height: 250px;
-    display: none;
-  }
-  .numbers {
-    flex-direction: column;
+}
+@media screen and (min-width: 1200px) {
+  .testimonial {
+    background-color: #f6f5f5;
+    padding: 130px;
+    .header {
+      text-align: center;
+      h5 {
+        font-size: 1.3rem;
+        font-weight: 300;
+        font-family: "Indie Flower", cursive;
+        color: red;
+      }
+      h3 {
+        font-size: 2.2rem;
+        font-weight: 300;
+      }
+    }
+    .slider {
+      margin: auto;
+      margin-top: 60px;
+      margin-bottom: 30px;
+      width: 760px;
+      height: 250px;
+    }
+    .numbers {
+      display: flex;
+      justify-content: center;
+      p {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px 70px;
+        div {
+          font-size: 2rem;
+        }
+        &:nth-child(1) div {
+          color: #16c3b0;
+        }
+        &:nth-child(2) div {
+          color: #fdb62f;
+        }
+        &:nth-child(3) div {
+          color: #71bc42;
+        }
+        &:nth-child(4) div {
+          color: #dc3545;
+        }
+      }
+    }
   }
 }
