--- a/kiddy/src/pages/home/home.module.scss
+++ b/kiddy/src/pages/home/home.module.scss
@@ -73,7 +73,7 @@ main {
     width: 100%;
     .colorCards {
       display: flex;
-      padding: 0px;
+      padding: 50px 10px;
       justify-content: center;
       flex-direction: column;
       .first {
@@ -119,9 +119,9 @@ main {
 
   .text {
     font-size: 1rem;
-    padding: 70px 40px 40px 40px;
+    padding: 50px 10px 10px 10px;
     text-align: center;
-    width: 480px;
+    width: 380px;
     height: 270px;
     h5 {
       font-size: 1.2rem;
