--- a/kiddy/src/components/reusibleComponents/ourPackages/ourPackages.module.scss
+++ b/kiddy/src/components/reusibleComponents/ourPackages/ourPackages.module.scss
@@ -29,7 +29,7 @@
       background-color: white;
       border-radius: 8px;
       margin: 15px;
-      width: 350px;
+      width: 100%;
       height: 440px;
       display: flex;
       flex-direction: column;
@@ -59,10 +59,13 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 900px) {
   .cards {
     flex-direction: column !important;
     padding: 0px;
     align-items: center;
+    .packCard {
+      height: 340px;
+    }
   }
 }
