--- a/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
+++ b/kiddy/src/components/reusibleComponents/ourPricing/ourPricing.module.scss
@@ -122,9 +122,10 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 900px) {
   .OurPricing {
     flex-direction: column;
+    align-items: center;
   }
   .pricingFirst {
     padding: 30px 0px;
