--- a/kiddy/src/components/reusibleComponents/testimonial/carousel/corousel.module.scss
+++ b/kiddy/src/components/reusibleComponents/testimonial/carousel/corousel.module.scss
@@ -1,72 +1,73 @@
 .sliders {
-  .slider {
-    background-color: #fd4d40;
+  background-color: #fd4d40;
+  width: 640px;
+  height: 250px;
+  .carousel {
     display: flex;
-    .img {
-      padding: 20px 60px 60px 20px;
-      img {
-        width: 80px;
-        height: 80px;
-      }
-    }
-    .text {
-      padding: 20px;
-      color: white;
-      h5 {
-        font-size: 1.3rem;
-        color: rgba(255, 255, 255, 0.8);
-        padding-bottom: 10px;
-      }
-      h6 {
-        font-size: 1rem;
-        font-weight: 300;
-        color: rgba(207, 207, 207, 0.6);
-        padding-bottom: 10px;
-      }
-      p {
-        font-size: 1.3rem;
-        line-height: 34px;
-        padding-bottom: 20px;
-      }
-    }
-  }
-
-  .slick-dots {
-    bottom: 50px;
-  }
-
-  @media screen and (max-width: 480px) {
     .slider {
-      flex-direction: column;
+      display: flex !important;
+      flex-direction: row;
+      margin-top: 20px;
       .img {
+        // width: 200px;
+        // height: 200px;
         padding: 10px;
+        img {
+          width: 100px;
+          height: 100px;
+        }
       }
       .text {
-        padding: 10px;
+        color: white;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 20px;
+        h6 {
+          color: rgb(255, 255, 255, 0.6);
+          font-size: 1rem;
+          font-weight: 300;
+          padding: 20px 0px;
+        }
+        h5 {
+          font-size: 1.2rem;
+          font-weight: 400;
+        }
+        p {
+          font-size: 1.3rem;
+          font-weight: 300;
+          letter-spacing: 2px;
+          line-height: 33px;
+        }
       }
     }
   }
+}
 
-  @media screen and (max-width: 768px) {
-    .slider {
-      flex-direction: column;
-      .img {
-        padding: 10px;
-      }
-      .text {
-        padding: 10px;
-      }
-    }
-  }
-
-  @media screen and (min-width: 1200px) {
-    .slider {
-      flex-direction: row !important;
-      .img {
-        padding: 20px 60px 60px 20px;
-      }
-      .text {
-        padding: 20px;
+@media screen and (max-width: 900px) {
+  .sliders {
+    background-color: #fd4d40;
+    width: 480px;
+    height: 350px;
+    .carousel {
+      display: flex;
+      .slider {
+        display: flex !important;
+        flex-direction: row;
+        .img {
+          // width: 200px;
+          // height: 200px;
+          // padding: 20px;
+          // margin: 10px;
+          img {
+            // width: 100%;
+          }
+        }
+        .text {
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+        }
       }
     }
   }
