--- a/kiddy/src/components/reusibleComponents/testimonial/testimonial.module.scss
+++ b/kiddy/src/components/reusibleComponents/testimonial/testimonial.module.scss
@@ -1,156 +1,85 @@
-@media screen and (max-width: 480px) {
-  .testimonial {
-    background-color: #f6f5f5;
-    // padding: 30px;
-    // margin: 20px;
-    .header {
-      text-align: center;
-      h5 {
-        font-size: 1.1rem;
-        font-weight: 300;
-        font-family: "Indie Flower", cursive;
-        color: red;
-      }
-      h3 {
-        font-size: 2.2rem;
-        font-weight: 300;
-      }
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .header {
+    text-align: center;
+    padding: 50px;
+    h5 {
+      font-size: 1.1rem;
+      font-family: "Indie Flower", cursive;
+      font-weight: 300;
+      color: red;
     }
-    .slider {
-      margin: auto;
-      margin-top: 60px;
-      margin-bottom: 30px;
-      width: 100%;
-      height: 250px;
+    h3 {
+      font-size: 2.2rem;
+      font-weight: 300;
     }
-    .numbers {
+  }
+  .numbers {
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+
+    p {
+      padding: 0px 46px;
       display: flex;
-      justify-content: center;
       flex-direction: column;
-      p {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 0px 20px;
-        div {
-          font-size: 2rem;
-        }
-        &:nth-child(1) div {
-          color: #16c3b0;
-        }
-        &:nth-child(2) div {
-          color: #fdb62f;
-        }
-        &:nth-child(3) div {
-          color: #71bc42;
-        }
-        &:nth-child(4) div {
-          color: #dc3545;
-        }
+      text-align: center;
+      span {
+        font-size: 2.2rem;
+      }
+
+      &:nth-child(1) span {
+        color: #16c3b0; /* Цвет для первого span */
+      }
+
+      &:nth-child(2) span {
+        color: #ff6347; /* Цвет для второго span */
+      }
+
+      &:nth-child(3) span {
+        color: #1e90ff; /* Цвет для третьего span */
+      }
+
+      &:nth-child(4) span {
+        color: #ffd700; /* Цвет для четвертого span */
       }
     }
   }
 }
 
-@media screen and (max-width: 768px) {
-  .testimonial {
-    background-color: #f6f5f5;
-    padding: 30px;
-    .header {
-      text-align: center;
-      h5 {
-        font-size: 1.3rem;
-        font-weight: 300;
-        font-family: "Indie Flower", cursive;
-        color: red;
-      }
-      h3 {
-        font-size: 2.2rem;
-        font-weight: 300;
-      }
-    }
-    .slider {
-      margin: auto;
-      margin-top: 60px;
-      margin-bottom: 30px;
-      width: 100%;
-      height: 250px;
-    }
-    .numbers {
+@media screen and (max-width: 900px) {
+  .numbers {
+    display: flex;
+    // justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+
+    p {
+      padding: 20px 46px !important;
       display: flex;
-      justify-content: center;
       flex-direction: column;
-      p {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 0px 70px;
-        div {
-          font-size: 2rem;
-        }
-        &:nth-child(1) div {
-          color: #16c3b0;
-        }
-        &:nth-child(2) div {
-          color: #fdb62f;
-        }
-        &:nth-child(3) div {
-          color: #71bc42;
-        }
-        &:nth-child(4) div {
-          color: #dc3545;
-        }
-      }
-    }
-  }
-}
-@media screen and (min-width: 1200px) {
-  .testimonial {
-    background-color: #f6f5f5;
-    padding: 130px;
-    .header {
       text-align: center;
-      h5 {
-        font-size: 1.3rem;
-        font-weight: 300;
-        font-family: "Indie Flower", cursive;
-        color: red;
+      span {
+        font-size: 2rem;
       }
-      h3 {
-        font-size: 2.2rem;
-        font-weight: 300;
+
+      &:nth-child(1) span {
+        color: #16c3b0; /* Цвет для первого span */
       }
-    }
-    .slider {
-      margin: auto;
-      margin-top: 60px;
-      margin-bottom: 30px;
-      width: 760px;
-      height: 250px;
-    }
-    .numbers {
-      display: flex;
-      justify-content: center;
-      p {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 0px 70px;
-        div {
-          font-size: 2rem;
-        }
-        &:nth-child(1) div {
-          color: #16c3b0;
-        }
-        &:nth-child(2) div {
-          color: #fdb62f;
-        }
-        &:nth-child(3) div {
-          color: #71bc42;
-        }
-        &:nth-child(4) div {
-          color: #dc3545;
-        }
+
+      &:nth-child(2) span {
+        color: #ff6347; /* Цвет для второго span */
+      }
+
+      &:nth-child(3) span {
+        color: #1e90ff; /* Цвет для третьего span */
+      }
+
+      &:nth-child(4) span {
+        color: #ffd700; /* Цвет для четвертого span */
       }
     }
   }
