--- a/kiddy/src/components/reusibleComponents/yellowLine/yellowLine.module.scss
+++ b/kiddy/src/components/reusibleComponents/yellowLine/yellowLine.module.scss
@@ -11,3 +11,18 @@
     font-weight: 300;
   }
 }
+@media screen and (max-width: 480px) {
+  .yellow {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px;
+    align-items: center;
+    background-color: #ffc107;
+
+    h3 {
+      color: white;
+      font-size: 1.5rem;
+      font-weight: 300;
+    }
+  }
+}
