--- a/kiddy/src/pages/home/home.module.scss
+++ b/kiddy/src/pages/home/home.module.scss
@@ -65,7 +65,7 @@ main {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 900px) {
   main {
     background-color: rgb(255, 255, 255);
     z-index: 999;
@@ -80,6 +80,8 @@ main {
         background-color: #fd4d40;
         margin: 0px;
         position: relative;
+        display: flex;
+        justify-content: center;
         .one {
           background-color: #fd4d40;
         }
@@ -88,6 +90,8 @@ main {
         background-color: #fdb62f;
         position: relative;
         margin: 0px;
+        display: flex;
+        justify-content: center;
         .two {
           background-color: #fdb62f;
         }
@@ -96,6 +100,8 @@ main {
         background-color: #16c3b0;
         margin: 0px;
         position: relative;
+        display: flex;
+        justify-content: center;
         .three {
           background-color: #16c3b0;
         }
